engines/ep/src/durability/passive_durability_monitor.cc
@@ -63,6 +63,26 @@ PassiveDurabilityMonitor::PassiveDurabilityMonitor(
                                       nullptr,
                                       nullptr,
                                       SyncWrite::InfiniteTimeout{});
+        // Advance the highPreparedSeqno iterator to point to the highest
+        // SyncWrite which has been prepared.
+        auto lastIt = std::prev(s->trackedWrites.end());
+        if (lastIt->getBySeqno() <= highPreparedSeqno) {
+            s->highPreparedSeqno.it = lastIt;
+        }
+
+        // Advance the highCompletedSeqno iterator to point to the highest
+        // SyncWrite which has been completed.
+        //
+        // Note: One might assume that this would always point to
+        // trackedWrites.begin(), given that we are a newly minted PassiveDM and
+        // hence would only be tracking incomplete SyncWrites. However, we
+        // _could_ have been converted from an ActiveDM with null topology which
+        // itself was converted from a previous PassiveDM which _did_ have
+        // completed SyncWrites still in trackedWrites (because they haven't
+        // been persisted locally yet).
+        if (lastIt->getBySeqno() <= highCompletedSeqno) {
+            s->highCompletedSeqno.it = lastIt;
+        }
     }
 }
 
